--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainWorld.MainWorld
 EditorStartupMap=/Game/Maps/MainWorld.MainWorld
+GlobalDefaultGameMode=/Game/Character/BP_RTS_GameMode.BP_RTS_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
